# revoq

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  build.sh
.github/workflows/: ci.yml
benchmarks/: journal_handler_benchmark_p99.cpp  journal_read_throughput.cpp  journal_write_throughput.cpp  typed_dispatch_overhead.cpp
docs/: architecture.md  benchmarking.md  commercial_support.md  file_format.md  memory_model.md  tuning_overview.md
examples/: basic_write_read.cpp  multiprocess.cpp  static_dispatch.cpp  typed_dispatch.cpp
examples/python/: roundtrip.py
include/revoq/: CpuAffinity.h  FileUtils.h  HashUtils.h  Journal.h  JournalBase.h  JournalError.h  JournalFrame.h  JournalPage.h  JournalPlatform.h  JournalReader.h  JournalWriter.h  MmapBuffer.h  MurMurHash3.h  PageWarmer.h  RealtimePriority.h  StringUtils.hpp  TimeUtils.h  TscTimer.h  TypedJournalDispatcher.h  portable_intrinsics.h
python/: revoq_py.cpp
python/tests/: conftest.py  test_reader.py  test_roundtrip.py  test_writer.py
scripts/: check_system.sh  collect_benchmark_env.sh  setup_benchmark_session.sh
src/: MmapBuffer.cpp  MurMurHash3.cpp  TimeUtils.cpp
tests/: test_frame_header.cpp  test_helpers.h  test_hugepage.cpp  test_journal_reader.cpp  test_journal_writer.cpp  test_journal_writer_resume.cpp  test_multiprocess.cpp  test_publish_ordering.cpp  test_typed_reader.cpp
